# advent-of-code

./: .gitignore  CMakeLists.txt  pyproject.toml
day1/: day1.py  solution1.py
day1/test/: test_day1_step1.py
day2/: day2.py  solution2.py
day2/test/: test_day2.py
day3/: day3.py  solution.py
day3/test/: symbols.txt  test_day3.py
day4/: day4.py  res.txt  solution.py
day4/test/: test_day4.py
day5/: day5.py
day5/test/: test_day5.py
day6/: day6.py
day6/test/: test_day6.py
rust/day_one/src/: main.rs
scripts/: init_new_day.sh
utilities/: InputParser.h  day.py  loader.py  parsing.py
utilities/test/: test_loader.py
