[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Tonitum <cameron@tonitum.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
debugpy = "^1.8.1"
pynvim = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
